--- a/src/assets/css/_index.scss
+++ b/src/assets/css/_index.scss
@@ -41,6 +41,6 @@ $footerHeight: 200px;
 @import "./basic";
 @import "./map";
 @import "./modal";
-@import "./card-item";
+@import "site-item";
 @import "./header&footer";
 
