--- a/src/assets/css/map.scss
+++ b/src/assets/css/map.scss
@@ -3,8 +3,7 @@ $colorBeige: #deb56f;
 
 .meccg-underdeeps-image {
   box-shadow: 0 0 0 5px black,
-  0 0 0 8px rgba(164, 74, 151, 0.49),
-  0 0 0 15px black;
+  0 0 0 8px rgba(0, 0, 0, 0.49);
   border-radius: 0.5px;
 }
 
@@ -106,7 +105,7 @@ foreignObject.site-object {
 
   .content-frame {
     height: 100%;
-    padding: 20px 0 0 30px;
+    padding: 40px;
     width: 100%;
     font-size: 10px;
   }
@@ -122,26 +121,12 @@ foreignObject.site-object {
 }
 
 
-body .site-object[aria-description="1"] .site-button {
-  background-color: white !important;
-  border: 12px solid white !important;
-}
-
-$colorTurkise2: #00ffc3;
-
-body .site-object[aria-describedby="1"] .site-button {
-  background-color: #4d4d4d;
-  border: 10px solid #4d4d4d;
-}
-
 .leaflet-map-container:not(._undergorund-mode) ._surface {
   @extend .fade-in;
 }
 
 .leaflet-map-container._undergorund-mode ._surface {
   @extend .fade-out;
-  //opacity: 0;
-  //pointer-events: none;
   display: none;
 }
 
